	- Other bug fixes.
	- Some preparation for future features. 
2018-06-22
	- Fixed improper regexes halting the bot on a global scale.
2018-06-23 
	- Nadeko logging is now able to be enabled/disabled, for those who don't want it. 
	- A new, rudimentary way to configure server variables has been added. It needs a facelift.
2018-06-23
	- Fixed a bug where the bot wouldn't work in servers that didn't have a nadeko logging variable in the server config.
	- Fixed a permissions bug with the configure command.
2018-06-23
	- Removed a bit of voice-related code that did literally nothing.	
2018-06-28
	- Keys are now detected with message edits.
2018-06-28
	- Command added for accessing the github repo for the bot.
2018-06-29
	- Key related commands are now all under one single command. 
2018-07-19
	- New exception handler. 
	- New way for searching for users by ID, name, nickname, or direct mention. 
2018-07-19
	- Very basic message counting implementation. 
2018-07-19
	- Message stats, including reactions given, recieved, and images sent. Fixed a bug.
2018-08-21
	- Watched users and voice state changes.
2018-08-22
	- Fix trailing commas 
2018-08-24 
	- Small change to user searching
2018-08-24
	- Merged uinfo and stats into just uinfo, also prettified it a little bit.
2018-08-24
	- Code optimization and cleanup
2018-08-25
	- Updated behavior of NSFW command
2018-08-25
	- Visual changes to voice logging 
	- Fixed a typo
2018-08-26
	- Added a timestamp to voice activity logging
2018-08-26
	- Better voice timestamp formatting
2018-08-28
	- Fixed a small bug where the minutes section in voice logging was actually the month
2018-08-31
	- Quick, rudimentary patch to allow for a more intuitive way to add voice watch users.
2018-09-03
	- Added role ping watching, and the "reactify" function. (A reaction-based menu system.)
2018-09-03
	- Boolean option for reactify, cleaned stop command.