@@ -66,3 +66,7 @@
 	- Added role ping watching, and the "reactify" function. (A reaction-based menu system.)
 2018-09-03
 	- Boolean option for reactify, cleaned stop command.
+2018-09-04
+	- Toggles option for reactify
+	- Reworked configuration command
+	- Made reactify output more consistent 
